[xpath] Modernize /fast/xpath tests https://bugs.webkit.org/show_bug.cgi?id=289648 rdar://146892392
Reviewed by Tim Nguyen.

Modernize the tests in `fast/xpath` to use `test-js.js` and drop the
console element.

* LayoutTests/fast/xpath/4XPath/Borrowed/cz_20030217.html:
* LayoutTests/fast/xpath/4XPath/Borrowed/kd_20010423.html:
* LayoutTests/fast/xpath/4XPath/Borrowed/od_20000608.html:
* LayoutTests/fast/xpath/4XPath/Borrowed/rs_20010831.html:
* LayoutTests/fast/xpath/4XPath/Borrowed/sr_20021217.html:
* LayoutTests/fast/xpath/4XPath/Core/test_boolean_expr.html:
* LayoutTests/fast/xpath/4XPath/Core/test_core_functions-expected.txt:
* LayoutTests/fast/xpath/4XPath/Core/test_core_functions.html:
* LayoutTests/fast/xpath/4XPath/Core/test_literal_expr.html:
* LayoutTests/fast/xpath/4XPath/Core/test_location_path.html:
* LayoutTests/fast/xpath/4XPath/Core/test_node_test.html:
* LayoutTests/fast/xpath/4XPath/Core/test_nodeset_expr.html:
* LayoutTests/fast/xpath/4XPath/Core/test_numeric_expr.html:
* LayoutTests/fast/xpath/4XPath/Core/test_parser.html:
* LayoutTests/fast/xpath/4XPath/Core/test_predicate_list.html:
* LayoutTests/fast/xpath/4XPath/Core/test_step.html:
* LayoutTests/fast/xpath/ambiguous-operators-expected.txt:
* LayoutTests/fast/xpath/ambiguous-operators.html:
* LayoutTests/fast/xpath/attr-namespace.html:
* LayoutTests/fast/xpath/attribute-node-predicate.html:
* LayoutTests/fast/xpath/detached-subtree-invalidate-iterator.html:
* LayoutTests/fast/xpath/document-order.html:
* LayoutTests/fast/xpath/evaluate-twice.html:
* LayoutTests/fast/xpath/invalid-functions.html:
* LayoutTests/fast/xpath/node-name-case-sensitivity-expected.txt:
* LayoutTests/fast/xpath/node-name-case-sensitivity.html:
* LayoutTests/fast/xpath/null-namespace-in-html-expected.txt:
* LayoutTests/fast/xpath/null-namespace-in-html.html:
* LayoutTests/fast/xpath/position.html:
* LayoutTests/fast/xpath/py-dom-xpath/abbreviations.html:
* LayoutTests/fast/xpath/py-dom-xpath/data.html:
* LayoutTests/fa

--- a/LayoutTests/fast/xpath/4XPath/Borrowed/cz_20030217.html
+++ b/LayoutTests/fast/xpath/4XPath/Borrowed/cz_20030217.html
@@ -2,10 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     SRC = '<?xml version=\'1.0\'?>\
@@ -46,6 +45,5 @@
     shouldBe('nodeset.snapshotLength', '0')
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
