--- a/LayoutTests/fast/xpath/4XPath/Borrowed/kd_20010423.html
+++ b/LayoutTests/fast/xpath/4XPath/Borrowed/kd_20010423.html
@@ -2,10 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 SRC_1 = '<?xml version="1.0" encoding="utf-8"?>\
@@ -28,6 +27,5 @@ SRC_1 = '<?xml version="1.0" encoding="utf-8"?>\
     shouldBe('actual', '"abcabcabc"')
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
