--- a/LayoutTests/fast/xpath/4XPath/Borrowed/od_20000608.html
+++ b/LayoutTests/fast/xpath/4XPath/Borrowed/od_20000608.html
@@ -56,10 +56,9 @@ Is this the "normal" performance ? Can I do better?
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 
@@ -77,6 +76,5 @@ Is this the "normal" performance ? Can I do better?
     shouldBe('nodeset.snapshotLength', '12')
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
