--- a/LayoutTests/fast/xpath/4XPath/Core/test_boolean_expr.html
+++ b/LayoutTests/fast/xpath/4XPath/Core/test_boolean_expr.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 
@@ -60,6 +59,5 @@ shouldBe('doc.evaluate("true() or true()", doc, null, XPathResult.BOOLEAN_TYPE, 
 shouldBe('doc.evaluate("false() or false()", doc, null, XPathResult.BOOLEAN_TYPE, null).booleanValue', 'false');
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
