--- a/LayoutTests/fast/xpath/attr-namespace.html
+++ b/LayoutTests/fast/xpath/attr-namespace.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 <script src="xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 function nsResolver(prefix) {
@@ -36,6 +35,5 @@ shouldBe('doc.evaluate("//@xmlns", doc, nsResolver, XPathResult.ORDERED_NODE_SNA
 shouldBe('doc.evaluate("//@xmlns:*", doc, nsResolver, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null).snapshotLength', '0');
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
