--- a/LayoutTests/fast/xpath/position.html
+++ b/LayoutTests/fast/xpath/position.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 <script src="xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 
@@ -79,6 +78,5 @@ ROOT2.innerHTML = '<p num="1"></p><p num="2" type="warning"></p><p num="3" type=
     shouldBe("document.evaluate('p[5][@type=\"warning\"]/@num', ROOT2, null, XPathResult.STRING_TYPE, null).stringValue", "'5'");
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
