--- a/LayoutTests/fast/xpath/py-dom-xpath/axes.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/axes.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 function arraysAreEqual(array1, array2) {
@@ -118,6 +117,5 @@ for (i = 0; i < allNodes.snapshotLength; ++i) {
 }
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
