--- a/LayoutTests/fast/xpath/py-dom-xpath/expressions.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/expressions.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -139,6 +138,5 @@ test(doc, doc.documentElement, '2 > 1', true);
 test(doc, doc.documentElement, '1 > 1', false);
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
