--- a/LayoutTests/fast/xpath/py-dom-xpath/predicates.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/predicates.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -46,6 +45,5 @@ test(doc, doc.documentElement, '//group/descendant::item[number(//choice/@index)
 test(doc, doc.documentElement, '(//item[@id="5"]/preceding-sibling::item)[1]', [I2]);
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
