--- a/LayoutTests/fast/xpath/string-value.html
+++ b/LayoutTests/fast/xpath/string-value.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     doc = (new DOMParser).parseFromString(
@@ -43,6 +42,5 @@
     shouldBe("doc.evaluate('.', ATTR, null, XPathResult.STRING_TYPE, null).stringValue", "'<&nbsp;>'");
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
