--- a/LayoutTests/fast/xpath/xpath-non-ASCII-case-folding.html
+++ b/LayoutTests/fast/xpath/xpath-non-ASCII-case-folding.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 <body>
 <div id="test">
     <p id="English">This paragraph is marked as being in English.</p>
@@ -23,4 +23,3 @@
 
     document.body.removeChild(document.getElementById("test"));
 </script>
-<script src="../../resources/js-test-post.js"></script>
