--- a/LayoutTests/fast/xpath/4XPath/Borrowed/sr_20021217.html
+++ b/LayoutTests/fast/xpath/4XPath/Borrowed/sr_20021217.html
@@ -2,10 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     DOC1 = '<a><b><c/><d/></b></a>'
@@ -24,6 +23,5 @@
     shouldBe('node_names', '"b"')
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
