--- a/LayoutTests/fast/xpath/4XPath/Core/test_core_functions.html
+++ b/LayoutTests/fast/xpath/4XPath/Core/test_core_functions.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 <script src="test.js"></script>
 <script src="../../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     function nsResolver(prefix) {
@@ -108,6 +107,5 @@
     shouldBe('DOM.evaluate("lang(\'foo\')", LCHILD2, null, XPathResult.ANY_TYPE, null).booleanValue', 'false');
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
