--- a/LayoutTests/fast/xpath/4XPath/Core/test_node_test.html
+++ b/LayoutTests/fast/xpath/4XPath/Core/test_node_test.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 <script src="test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     function nsResolver(prefix) {
@@ -55,6 +54,5 @@
     shouldBe("nodeInResult(PI2, result)", "false");
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
