--- a/LayoutTests/fast/xpath/4XPath/Core/test_numeric_expr.html
+++ b/LayoutTests/fast/xpath/4XPath/Core/test_numeric_expr.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../../../resources/js-test-pre.js"></script>
+<script src="../../../../resources/js-test.js"></script>
 <script src="test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 /*
@@ -214,6 +213,5 @@
     shouldBe('DOM.evaluate("\'5\' >= @attr31", CHILD1, null, XPathResult.ANY_TYPE, null).booleanValue', 'false');
 
 </script>
-<script src="../../../../resources/js-test-post.js"></script>
 </body>
 </html>
