--- a/LayoutTests/fast/xpath/evaluate-twice.html
+++ b/LayoutTests/fast/xpath/evaluate-twice.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     doc = (new DOMParser).parseFromString("<doc><elem>1</elem><elem>2</elem></doc>", "application/xml");
@@ -30,6 +29,5 @@
     shouldBe("expr.evaluate(doc.documentElement.firstChild.nextSibling, XPathResult.NUMBER_TYPE, null).numberValue", "3");
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
