--- a/LayoutTests/fast/xpath/invalid-functions.html
+++ b/LayoutTests/fast/xpath/invalid-functions.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
     shouldThrow('document.createExpression("foobar()", null)');
@@ -21,6 +20,5 @@
     shouldThrow('document.evaluate("boolean()", document, null, XPathResult.ANY_TYPE, null)');
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
