--- a/LayoutTests/fast/xpath/null-namespace-in-html.html
+++ b/LayoutTests/fast/xpath/null-namespace-in-html.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 <script src="xpath-test-pre.js"></script>
 </head>
 <body>
-<p>This tests that XPath expressions with prefixes work correctly.</p>
 <div id="console"></div>
 <script>
+    description("This tests that XPath expressions with prefixes work correctly.");
     var xmlString = '<div/>';
     var doc = (new DOMParser()).parseFromString(xmlString, "text/xml");
     document.body.insertBefore(document.importNode(doc.documentElement, null), document.body.firstChild);
@@ -14,8 +14,6 @@
     var expr = document.createExpression("//div", null);
     var result = expr.evaluate(document.documentElement, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
     checkSnapshot("//div", result, [document.getElementById("console")]);
-
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
