--- a/LayoutTests/fast/xpath/py-dom-xpath/data.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/data.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -53,6 +52,5 @@ test(doc, doc.documentElement, 'local-name(//element/text())', '', nsResolver);
 test(doc, doc.documentElement, 'namespace-uri(//element/text())', '', nsResolver);
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
