--- a/LayoutTests/fast/xpath/py-dom-xpath/functions.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/functions.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -189,6 +188,5 @@ test(doc, doc, 'string(number("1.."))', 'NaN');
 test(doc, doc, 'string(number(".-1"))', 'NaN');
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
