--- a/LayoutTests/fast/xpath/py-dom-xpath/nodetests.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/nodetests.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -89,6 +88,5 @@ test(doc, doc, 'doc/child::processing-instruction()', [PI1, PI2]);
 test(doc, doc, 'doc/child::processing-instruction("one")', [PI1]);
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
