--- a/LayoutTests/fast/xpath/py-dom-xpath/paths.html
+++ b/LayoutTests/fast/xpath/py-dom-xpath/paths.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<script src="../../../resources/js-test-pre.js"></script>
+<script src="../../../resources/js-test.js"></script>
 <script src="../xpath-test-pre.js"></script>
 </head>
 <body>
-<div id="console"></div>
 
 <script>
 var doc = (new DOMParser).parseFromString(
@@ -252,6 +251,5 @@ var doc = (new DOMParser).parseFromString(
 test(doc, doc.documentElement, "child::*[self::chapter or self::appendix][position()=last()]", [doc.getElementsByTagName("chapter")[1]]);
 
 </script>
-<script src="../../../resources/js-test-post.js"></script>
 </body>
 </html>
