--- a/LayoutTests/fast/xpath/substring-after.html
+++ b/LayoutTests/fast/xpath/substring-after.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<p>Test for <a href="http://bugs.webkit.org/show_bug.cgi?id=15437">bug 15437</a>:
-XPath substring-after function is broken.</p>
-<div id="console"></div>
 
 <script>
+    description("Test for bug 15437 (http://bugs.webkit.org/show_bug.cgi?id=15437): XPath substring-after function is broken.");
     shouldBe("document.evaluate(\"substring-after('abcde', 'd')\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'e'");
     shouldBe("document.evaluate(\"substring-after('abcde', 'f')\", document, null, XPathResult.STRING_TYPE, null).stringValue", "''");
     shouldBe("document.evaluate(\"substring-after('abcde', '')\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'abcde'");
@@ -16,6 +14,5 @@ XPath substring-after function is broken.</p>
     shouldBe("document.evaluate(\"substring-after('1999/04/01', '19')\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'99/04/01'");
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
