--- a/LayoutTests/fast/xpath/substring-non-positive-postion.html
+++ b/LayoutTests/fast/xpath/substring-non-positive-postion.html
@@ -1,20 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<p>Test for <a href="http://bugs.webkit.org/show_bug.cgi?id=41913">bug 41913</a>:
-XPath substring function does not correctly handle non-positive values for the position argument</p>
-<div id="console"></div>
+<p>
+</p>
 
 <script>
+    description("Test for bug 41913 (http://bugs.webkit.org/show_bug.cgi?id=41913): XPath substring function does not correctly handle non-positive values for the position argument.");
     shouldBe("document.evaluate(\"substring('abcde', 0)\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'abcde'");
     shouldBe("document.evaluate(\"substring('abcde', -2)\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'abcde'");
     shouldBe("document.evaluate(\"substring('abcde', 0, 5)\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'abcd'");
     shouldBe("document.evaluate(\"substring('abcde', -2, 5)\", document, null, XPathResult.STRING_TYPE, null).stringValue", "'ab'");
 
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
