--- a/LayoutTests/fast/xpath/xpath-detached-nodes.html
+++ b/LayoutTests/fast/xpath/xpath-detached-nodes.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/js-test.js"></script>
 </head>
 <body>
 <p>This tests XPath expressions on detached document fragments and nodes.
 <br/>See https://bugs.webkit.org/show_bug.cgi?id=36427
-<div id="console"></div>
+
 
 <script>
+  description("This tests XPath expressions on detached document fragments and nodes. See https://bugs.webkit.org/show_bug.cgi?id=36427");
+
   frag = document.createDocumentFragment();
   child = document.createElement('div');
   frag.appendChild(child);
@@ -43,6 +45,5 @@
   shouldBe("document.evaluate('/* | *', ele, null, XPathResult.NUMBER_TYPE, null).numberValue",
            "NaN");
 </script>
-<script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
